// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPokemonNames shall return all pokemon by default 1`] = `
[
  "BUTTERFREE",
  "RATICATE",
  "ARBOK",
  "PIKACHU_HALLOWEEN",
  "RAICHU",
  "CLEFABLE",
  "PRIMEAPE",
  "DODRIO",
  "ONIX",
  "MAROWAK",
  "MEGANIUM",
  "TYPHLOSION",
  "FERALIGATR",
  "STEELIX",
  "HOUNDOOM",
  "VIGOROTH",
  "SLAKING",
  "ALTARIA",
  "BANETTE",
  "WALREIN",
  "ABOMASNOW",
  "VENUSAUR",
  "GOLEM",
  "BLASTOISE",
  "VICTREEBEL",
  "ABSOL",
  "GENGAR",
  "DITTO",
  "DUGTRIO",
  "DELIBIRD",
  "PUPITAR",
  "TYRANITAR",
  "KANGASKHAN",
  "CHARIZARD",
  "PINSIR",
  "TOXICROAK",
  "MR_MIME",
  "PIKACHU_CHRISTMAS",
  "WIGGLYTUFF",
  "PERSIAN",
  "GOLDUCK",
  "ARCANINE",
  "SLOWBRO",
  "VAPOREON",
  "JOLTEON",
  "FLAREON",
  "AMPHAROS",
  "SUDOWOODO",
  "ESPEON",
  "UMBREON",
  "SLOWKING",
  "WOBBUFFET",
  "HERACROSS",
  "SABLEYE",
  "SWALOT",
  "LUCARIO",
  "MAGNEZONE",
  "TOGEKISS",
  "LEAFEON",
  "GLACEON",
  "SYLVEON",
]
`;

exports[`getPokemonNames shall return all pokemon for multiple islands 1`] = `
[
  "RATICATE",
  "CLEFABLE",
  "PRIMEAPE",
  "DODRIO",
  "ONIX",
  "MAROWAK",
  "MEGANIUM",
  "TYPHLOSION",
  "FERALIGATR",
  "HOUNDOOM",
  "VIGOROTH",
  "SLAKING",
  "WALREIN",
  "ABOMASNOW",
  "VENUSAUR",
  "GOLEM",
  "BLASTOISE",
  "VICTREEBEL",
  "ABSOL",
  "DITTO",
  "DUGTRIO",
  "DELIBIRD",
  "PUPITAR",
  "TYRANITAR",
  "KANGASKHAN",
  "CHARIZARD",
  "MR_MIME",
  "WIGGLYTUFF",
  "PERSIAN",
  "GOLDUCK",
  "ARCANINE",
  "SLOWBRO",
  "VAPOREON",
  "FLAREON",
  "SUDOWOODO",
  "ESPEON",
  "UMBREON",
  "SLOWKING",
  "WOBBUFFET",
  "SABLEYE",
  "LUCARIO",
  "TOGEKISS",
  "LEAFEON",
  "GLACEON",
  "SYLVEON",
]
`;
